# src/routes.ts
@@ -2,6 +2,8 @@ import { Router } from 'express';
 import { authRouter } from './modules/auth/auth.routes.js';
 import { cartRouter } from './modules/cart/cart.routes.js';
 import { catalogRouter } from './modules/catalog/catalog.routes.js';
+import { checkoutRouter } from './modules/checkout/checkout.routes.js';
+import { ordersRouter } from './modules/orders/orders.routes.js';
 import { reviewsRouter } from './modules/reviews/reviews.routes.js';
 import { sellersRouter } from './modules/sellers/sellers.routes.js';
 import { wishlistRouter } from './modules/wishlist/wishlist.routes.js';
@@ -14,3 +16,5 @@ apiRouter.use(reviewsRouter);
 apiRouter.use('/sellers', sellersRouter);
 apiRouter.use('/wishlist', wishlistRouter);
 apiRouter.use('/cart', cartRouter);
+apiRouter.use('/checkout', checkoutRouter);
+apiRouter.use('/orders', ordersRouter);
